changement prénom + MAJ du boulot au mindef

--- a/main.tex
+++ b/main.tex
@@ -22,8 +22,8 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \namesection{Thomas}{SIMATIC}
-{20 ans - Nationalité Française}
-{Elève Ingénieur en Génie Informatique \\Filière Systèmes Temps Réel et Informatique Enfouie}
+{23 ans - Nationalité Française}
+{Ingénieur en Génie Informatique \\Filière Systèmes Temps Réel et Informatique Enfouie}
 {\input{contactInfo.local.txt}}
     
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -39,7 +39,7 @@
 \section{Formation} 
 
 \subsection[Université de Technologie de Compiègne]{Université de Technologie \\de Compiègne}
-\descript{2012 - Diplôme attendu en 2018}
+\descript{2012 - 2018}
 \faCaretRight Génie Informatique \\
 \faCaretRight Filière Systèmes Temps Réel et Informatique Enfouie\\
 \faCaretRight Erasmus à l'Ernst Abbe Hochschule (Jena, Allemagne) - System Design\\
@@ -55,26 +55,30 @@
 %     SKILLS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Compétences}
-\subsection{Informatique}
+% \subsection{Informatique}
 \location{Programmation :}
-VHDL, PACPUS, ROS, Assembleur\\
-C, C++, Python, Lisp, Prolog\\ 
+C, C++, Python, Micropython\\ 
+
+\location{Design de Processeur :}
+KiCad
+
+\location{Web :}
+HTML5/CSS, NodeJS, PHP
 
 \location{Modélisation \& base de données :}
 UML, SQL (PostgreSQL \& MySQL)\\
 
 \location{Outils :}
-Git, Emacs \& Vim, \LaTeX
+(Neo)Vim, Git, \LaTeX
 
 \location{Multimédia :}
-Reaper, Audacity \\
-the Gimp, Adobe Premiere \\ 
+Reaper, Audacity, Gimp, Premiere
 
 \sectionsep
 \subsection{Langues}
 \faCaretRight  Français (langue maternelle), \\
 \faCaretRight  Anglais (courant), \\
-\faCaretRight  Allemand (B2, Erasmus à Jena en Automne 2016),
+\faCaretRight  Allemand (B2),\\
 
 \faCaretRight  Formation \& Concours Fleur d'Eloquence (2015 \& 2017).
 \sectionsep
@@ -92,10 +96,9 @@ the Gimp, Adobe Premiere \\
 %     COURSEWORK
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Passions}
+Sport - Parkour, StreetWorkout \\
 Musique - Chant, Piano, Guitare\\
-Cirque - Monocycle, Slackline \\
-Création de sagas radiophoniques \\
-Sport - Parkour, Escalade 
+Cirque - Monocycle, Slackline
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -135,49 +138,45 @@ Sport - Parkour, Escalade
 %     EXPERIENCE
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Expérience professionnelle}
+\workplace{Ministère des Armées}{Mars 2018 - Février 2020}\\
+\position{Ingénieur d'Intégration Hardware}{Paris}
+    \vspace{0.9em} % Hacky fix for awkward extra vertical space (only necessary on first item)
+\begin{tightemize}
+\item Recherche sur les capacités sans-fil de l'ESP32, développement de modules Micropython (C embarqué, python)
+\item Design de cartes électroniques avec de fortes contraintes de compacité et de connectivité sous KiCad, gestion des achats de matériel et production manuelle des prototypes.
+\end{tightemize}
+\sectionsep
+
+\workplace{Ministère des Armées}{Septembre 2017 - Février 2018}\\
+\position{Stagiaire - développement informatique}{Paris}
+% \vspace{0.9em} % Hacky fix for awkward extra vertical space
+\begin{tightemize}
+\item Intégration d'une caméra et d'une IP d'encodage H.264 sur une plateforme FPGA (VHDL)
+\end{tightemize}
+\sectionsep
 
 \workplace{Alterface Projects}{Février - Juillet 2016}\\
 \position{Stagiaire - développement informatique}{Wavre, Belgique}
-\vspace{0.9em} % Hacky fix for awkward extra vertical space
+% \vspace{0.9em} % Hacky fix for awkward extra vertical space
 \begin{tightemize}
-\item Recherche d'une solution embarquée de Roaming Wi-Fi pour un système temps réel.
-\item Python, C embarqué (Atmel SAM4).
+\item Recherche d'une solution embarquée de Roaming Wi-Fi pour un système temps réel. Python, C embarqué (Atmel SAM4).
 \end{tightemize}
 \sectionsep
 
-\workplace{Alterface Projects}{Juillet 2013} \\
-\position{Stagiaire - Stage ouvrier interculturel}{Wavre, Belgique}
-% \vspace{\topsep} % Hacky fix for awkward extra vertical space
-\begin{tightemize}
-\item Aide à la production et à l'assemblage de pièces électroniques
-\end{tightemize}
-\sectionsep
-
-\workplace{SNECMA - CFTI}{Février 2013} \\
-\position{Stagiaire - Stage ouvrier}{Evry, 91}
-% \vspace{\topsep} % Hacky fix for awkward extra vertical space
-\begin{tightemize}
-\item Formation en Ajustage et Chaudronnerie
-\item Encadrement d'élèves de Troisième en stage d'Ajustage.
-\end{tightemize}
-\sectionsep
-
-% \runsubsection{The Westminster News} \\
-% \descript{Co-Editors-in-Chief (2014) | Layout Editor (2012) }
-% \location{Sep 2012 – May 2015 | Simsbury, CT}
+% \workplace{Alterface Projects}{Juillet 2013} \\
+% \position{Stagiaire - Stage ouvrier interculturel}{Wavre, Belgique}
+% % \vspace{\topsep} % Hacky fix for awkward extra vertical space
 % \begin{tightemize}
-% \item Led 30+ staff at a 400-student boarding school to publish the monthly school newspaper.
-% \item Consulted in layout design and technology application.
+% \item Aide à la production et à l'assemblage de pièces électroniques
 % \end{tightemize}
 % \sectionsep
 
-% \runsubsection{VietAbroader Organization} \\
-% \descript{Program Assistant Manager | VAPedia Associate }
-% \location{Mar 2013 – Mar 2014 | Ho Chi Minh City, Vietnam}
+% \workplace{SNECMA - CFTI}{Février 2013} \\
+% \position{Stagiaire - Stage ouvrier}{Evry, 91}
+% % \vspace{\topsep} % Hacky fix for awkward extra vertical space
 % \begin{tightemize}
-% \item VietAbroader is a non-profit organization run by Vietnamese students abroad.
-% \item Designed the high school content for the VAPedia website.
-% \item Assisted in recruiting guest speakers and volunteers for VietAbroader Study-Abroad Conference 2013.
+% \item Formation en Ajustage et Chaudronnerie
+% \item Encadrement d'élèves de Troisième en stage d'Ajustage.
 % \end{tightemize}
 % \sectionsep
 
@@ -193,15 +192,15 @@ Migration de modules PACPUS vers ROS pour un suivi autonome d'un véhicule par u
 Clône en VHDL d'un micro-processeur Atmega 8.
 
 
-\runsubsection{Sciences Cognitives}
-\descript{Travail de Laboratoire (COSTECH)}
-Expérimentations et étude des résultats sur le croisement perceptif.
+% \runsubsection{Sciences Cognitives}
+% \descript{Travail de Laboratoire (COSTECH)}
+% Expérimentations et étude des résultats sur le croisement perceptif.
 
 
 \runsubsection{Kami}
 \descript{Réalité Virtuelle}
 Jeu vidéo codé pour Oculus Rift \& Leap Motion avec Unity 3D. \\
-\faCaretRight \href{youtu.be/lFnLHkYR3sw}{  youtu.be/lFnLHkYR3sw}
+%\faCaretRight \href{youtu.be/lFnLHkYR3sw}{  youtu.be/lFnLHkYR3sw}
 
 
 \runsubsection{Le Pokétâche}
@@ -212,15 +211,19 @@ Logiciel de gestion de projet \& de tâches (C++ et Qt).
 %     PROJECTS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Projets extra-universitaires}
+\runsubsection{Oriog Créations}
+\descript{Vice-président et webmaster (depuis 2017)}
+Association de création de saga radiophoniques et promouvant la représentation de minoritées (notamment LGBT) dans la fiction.
+
 \runsubsection{Comédie Musicale de l'UTC }
 \descript{\'{E}criture et Mise en Scène (2015)}
 Comédie Musicale entièrement créée par des étudiants et produite au Théâtre Impérial de Compiègne. \\
 Management de la troupe de théâtre et coordination du reste de l'équipe (80 étudiants).
 
 
-\runsubsection{Spectacle des Lumières de l'UTC}
-\descript{Responsable "Corps" (2015)}
-Spectacle son \& lumière mêlant technique et arts de la scène. Recrutement \& coordination des Acteurs (Théâtre, Danse, Cirque\ldots)
+% \runsubsection{Spectacle des Lumières de l'UTC}
+% \descript{Responsable "Corps" (2015)}
+% Spectacle son \& lumière mêlant technique et arts de la scène. Recrutement \& coordination des Acteurs (Théâtre, Danse, Cirque\ldots)
 \sectionsep 
 
 \end{minipage} 
