ajout d'une licence

--- a/main.tex
+++ b/main.tex
@@ -213,7 +213,7 @@ Logiciel de gestion de projet \& de tâches (C++ et Qt).
 \section{Projets extra-universitaires}
 \runsubsection{Oriog Créations}
 \descript{Vice-président et webmaster (depuis 2017)}
-Association de création de saga radiophoniques et promouvant la représentation de minoritées (notamment LGBT) dans la fiction.
+Association de création de saga radiophoniques et promouvant la représentation de minorités (notamment LGBT) dans la fiction.
 
 \runsubsection{Comédie Musicale de l'UTC }
 \descript{\'{E}criture et Mise en Scène (2015)}
