ajout de mes expériences à The Tribe

--- a/main.tex
+++ b/main.tex
@@ -38,16 +38,16 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Compétences}
 % \subsection{Informatique}
-\location{Programmation :}
-Python, C, Javascript\\
+\location{Back End :}
+Python, GraphQL, Node \\
 
-\location{Web :}
-HTML5/CSS, JQuery, React, PHP
+\location{Front :}
+React \\
 \location{Modélisation \& base de données :}
 UML, SQL (PostgreSQL \& MySQL)\\
 
-\location{Design de PCB :}
-KiCad
+\location{Embarqué :}
+C, Micropython, KiCad (design de PCB)
 
 \location{Outils :}
 Vim, Git, \LaTeX
@@ -93,6 +93,7 @@ Erasmus à l'Ernst Abbe Hochschule (Jena, Allemagne) - System Design\\
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Passions}
 Sport - Parkour, StreetWorkout \\
+Danse - Pole dance, Valse, folk \\
 Musique - Chant, Piano, Guitare\\
 Cirque - Monocycle, Slackline\\
 Ecriture - Saga MP3
@@ -135,9 +136,17 @@ Ecriture - Saga MP3
 %     EXPERIENCE
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Expérience professionnelle}
-\workplace{Sculpteo}{depuis Décembre 2020}\\
-\position{Ingénieur Fullstack}{Villejuif}
+\workplace{The Tribe - Agence de développement Web}{depuis Juin 2021}\\
+\position{Ingénieur Fullstack}{Paris}
     \vspace{0.9em} % Hacky fix for awkward extra vertical space (only necessary on first item)
+\begin{tightemize}
+\item Développement du back-office de Sewan (front React, backend avec microservices Python/Fast API \& lambdas AWS)
+\item Accompagnement à la création de produit à travers des Design Sprints.
+\end{tightemize}
+\sectionsep
+
+\workplace{Sculpteo - Impression 3D}{Décembre 2020 - Juin 2021}\\
+\position{Ingénieur Fullstack}{Villejuif}
 \begin{tightemize}
 \item Développement et maintenance du site web de Sculpteo en externe la commande de pièces à imprimer (plus de 1000 par jour) et en interne la gestion des flux de production de l'usine.
 \item Site basé sur le framework Django, front en JQuery
@@ -152,13 +161,13 @@ Ecriture - Saga MP3
 \end{tightemize}
 \sectionsep
 
-\workplace{Ministère des Armées}{Septembre 2017 - Février 2018}\\
-\position{Stagiaire - Développement Embarqué}{Paris}
-% \vspace{0.9em} % Hacky fix for awkward extra vertical space
-\begin{tightemize}
-\item Intégration d'une caméra et d'une IP d'encodage H.264 sur une plateforme FPGA (VHDL)
-\end{tightemize}
-\sectionsep
+% \workplace{Ministère des Armées}{Septembre 2017 - Février 2018}\\
+% \position{Stagiaire - Développement Embarqué}{Paris}
+% % \vspace{0.9em} % Hacky fix for awkward extra vertical space
+% \begin{tightemize}
+% \item Intégration d'une caméra et d'une IP d'encodage H.264 sur une plateforme FPGA (VHDL)
+% \end{tightemize}
+% \sectionsep
 
 % \workplace{Alterface Projects}{Février - Juillet 2016}\\
 % \position{Stagiaire - développement informatique}{Wavre, Belgique}
@@ -196,18 +205,18 @@ Gestion du serveur VPS de l'association, du site wordpress et création de sites
 \descript{2017 - Recherche en laboratoire (HEUDIASYC)}
 (Projet universitaire) Programmation de voitures intelligentes (Zoé) pour l'enregistrement et le suivi de trajectoires en ROS (Python)
 
-%\runsubsection{Analyse d'Images}
-%\descript{2017 - Intelligence Artificielle}
-%(Projet universitaire) Détecteur de visage par réseau de neurones, avec utilisation d'un classificateur SVM et d'une fenêtre glissante.
+\runsubsection{Analyse d'Images}
+\descript{2017 - Intelligence Artificielle}
+(Projet universitaire) Détecteur de visage par réseau de neurones en Python, avec classificateur SVM et fenêtre glissante.
 
-\runsubsection{Kami}
-\descript{2017 - Réalité Virtuelle}
-(Projet universitaire) Jeu vidéo codé pour Oculus Rift \& Leap Motion avec Unity 3D en pair programming. \\
+% \runsubsection{Kami}
+% \descript{2017 - Réalité Virtuelle}
+% (Projet universitaire) Jeu vidéo codé pour Oculus Rift \& Leap Motion avec Unity 3D en pair programming. \\
 %\faCaretRight \href{youtu.be/lFnLHkYR3sw}{  youtu.be/lFnLHkYR3sw}
 
-\runsubsection{My Atmega}
-\descript{2015 - Design de Processeur en VHDL}
-(Projet universitaire) Clône d'un micro-processeur Atmega 8.
+% \runsubsection{My Atmega}
+% \descript{2015 - Design de Processeur en VHDL}
+% (Projet universitaire) Clône d'un micro-processeur Atmega 8.
 
 \runsubsection{Comédie Musicale de l'UTC }
 \descript{2015 - \'{E}criture et Mise en Scène}
